# build-your-own-diffusion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: cifar10.yaml  mnist.yaml  smoke.yaml
docs/: api-reference.md  architecture.md  configuration.md  development.md  mathematics.md  operations.md  security.md  user-guide.md
src/diffusionlab/: __init__.py  __main__.py  cli.py  config.py  data.py  pipeline.py
src/diffusionlab/models/: __init__.py  blocks.py  embeddings.py  unet.py
src/diffusionlab/schedulers/: __init__.py  base.py  ddim.py  ddpm.py  schedules.py
src/diffusionlab/training/: __init__.py  ema.py  trainer.py
src/diffusionlab/utils/: __init__.py  image.py  logging.py  torch_utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_data.py  test_edge_paths.py  test_ema.py  test_models.py  test_pipeline.py  test_schedulers.py  test_schedules.py  test_trainer.py  test_utils.py
